# Ecole-Directe-Plus

./: .17qtrp01ywxqm783940278~  .180fg8gixbmj72992953149~  .1bomsyygryv2f1372006126~  .1paeouu8tyn512873586466~  .1u2m3gepnqmli443860325~  .1vesrovjv8aoq246054399~  .20ebgtknqxj6r61658899~  .2dvmyv067mlrm3998536489~  .332c45haouhal1349492985~  .3egaes7043gek558760708~  .3jvs204eblsgg3391539045~  .dmcj1vxji91t2023338433~  .eslintrc.cjs  .gitignore  .o3bhh1wbloio38641567~  .plqs4946568l3212584819~  .prettierignore  .prettierrc  .replit  CNAME  LICENSE.md  Launcher.bat  PRETTIER-CONFIG.md  README.md  SECURITY.md  index.html  manifest.webmanifest  package-lock.json  package.json  prettier_config.txt  replit.nix  secret.json  vite.config.js  vite.domain.config.js
.github/ISSUE_TEMPLATE/: nouvelle-fonctionnalité---amélioration.md  signaler-un-bug.md
.github/workflows/: build-deploy.yml  dev-build-deploy.yml  main-build-deploy.yml  mobile-build.yml  webpack.yml
devutils/: utils.js
emails/: FeedbackResponse.html
guestData/default/: detailed_homeworks.json  grades.json  incoming_homeworks.json  login.json
public/: manifest.json  robots.txt  serviceWorker.js  sitemap.xml
public/cache/: NetworkError.html  SplashScreen.html
server/: package-lock.json  package.json  proxy_server.js  proxy_status_checker.js
src/: .App.jsx.2559204433~  App.css  App.jsx  edpConfig.js  index.jsx  testGrades2.json
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/injection/: index.js
src-tauri/src/: lib.rs  main.rs
(+427 files in other folders)
