[package]
name = "ecoledirecteplus"
version = "0.1.0"
description = "Ecole Directe Plus is a web app that is designed to replace and improve EcoleDirecte."
edition = "2021"

[lib]
name = "ecoledirecteplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
include-flate = "0.3"
tauri-plugin-http = { version = "=2.3.0", default-features = false, features = [
  "rustls-tls",
  "http2",
  "charset",
  "macos-system-configuration",
  "unsafe-headers",
] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
